# msu-hackathon

./: .env.template  Dockerfile  README.md  docker-compose.yml  fixtures.py  main.py  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
app/api/: __init__.py
app/api/admin/: views.py
app/api/notes/: models.py
app/api/tasks/: accessor.py  enums.py  errors.py  models.py  schemas.py  views.py
app/api/users/: accessor.py  enums.py  errors.py  manager.py  models.py  schemas.py
app/api/users/views/: auth.py  elder.py  users.py
app/core/: config.py  db.py  depends.py  ff.py  gemini.py  s3.py  schemas.py  sentry.py  store.py
app/core/ff/: accessor.py  schemas.py
app/core/models/migrations/versions/: 2025_04_20_00_36__7b4202214e84_.py  2025_04_20_01_04__aa0c9d03aa05_fix_users.py  2025_04_20_02_24__5354a2a1ed69_init.py  2025_04_20_02_27__e04674db9cdf_group_number.py  2025_04_20_10_01__a37913975f52_.py  2025_04_20_11_52__f388cca198b1_.py  2025_04_20_12_02__3d7dc90b4f8c_.py  2025_04_20_14_10__aad3e56794b7_fix.py  2025_04_20_14_52__394eacc8c60f_.py
